# cortex

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README.zh.md  docker-compose.yml
crates/cortex-app/: Cargo.toml
crates/cortex-app/src/: auth.rs  cli.rs  deploy.rs  lib.rs  main.rs  node_manager.rs  permission.rs  plugin_loader.rs  plugin_manager.rs  scaffold.rs
crates/cortex-app/src/tests/: deploy.rs  mod.rs  node_manager.rs
crates/cortex-app/tests/: cli.rs  cli_scaffold.rs  plugin_manager.rs
crates/cortex-kernel/: Cargo.toml
crates/cortex-kernel/benches/: journal_bench.rs
crates/cortex-kernel/src/: audit.rs  config_loader.rs  config_validator.rs  config_watcher.rs  db_writer.rs  embedding_client.rs  embedding_evaluator.rs  embedding_store.rs  goal_store.rs  journal.rs  lib.rs  memory_graph.rs  memory_store.rs  model_info.rs  prompt_manager.rs  replay.rs  session_store.rs  store.rs  task_store.rs  util.rs  vision_discovery.rs
crates/cortex-kernel/tests/: config_loader.rs  journal.rs  memory_store_compat.rs  persistence_replay.rs  prompt_manager.rs  session_store_compat.rs  sqlite_store.rs  task_audit_compat.rs
crates/cortex-retrieval/: Cargo.toml
crates/cortex-retrieval/src/: lib.rs
crates/cortex-retrieval/tests/: rag_pipeline.rs
crates/cortex-runtime/: Cargo.toml
crates/cortex-runtime/src/: client.rs  command_registry.rs  daemon.rs  heartbeat.rs  hot_reload.rs  ingress.rs  instance_manager.rs  introspect_tools.rs  lib.rs  metrics.rs  plugin_loader.rs  rate_limiter.rs  rpc.rs  runtime.rs  session_manager.rs  stability.rs  tls.rs  transport.rs  turn_executor.rs
crates/cortex-runtime/src/channels/: mod.rs  pairing.rs  qq.rs  store.rs  telegram.rs  whatsapp.rs
crates/cortex-runtime/src/media/: image_gen.rs  image_understand.rs  mod.rs  output.rs  stt.rs  tts.rs  video_gen.rs  video_understand.rs
crates/cortex-runtime/src/tests/: channel_store.rs  control.rs  daemon_sessions.rs  http_audit.rs  http_memory.rs  http_meta.rs  http_operator.rs  http_rpc.rs  http_sessions.rs  line_protocol.rs  mod.rs  retrieval_context.rs  rpc_batch.rs  rpc_memory.rs  rpc_sessions.rs  ws_rpc.rs
crates/cortex-runtime/tests/: daemon.rs  ingress.rs  multi_user.rs  process_plugin.rs  session_restore.rs  soak_fault.rs  transport.rs
crates/cortex-sdk/: Cargo.toml  README.md
crates/cortex-sdk/src/: lib.rs
crates/cortex-sdk/tests/: native_abi.rs  plugin_contract.rs  tool_result.rs
crates/cortex-turn/: Cargo.toml
crates/cortex-turn/src/: guardrails.rs  lib.rs  observability.rs  plugin.rs  security.rs
crates/cortex-turn/src/acp_client/: mod.rs
crates/cortex-turn/src/agent_pool/: delegation.rs  mod.rs  orchestration.rs  planner.rs
crates/cortex-turn/src/attention/: mod.rs
crates/cortex-turn/src/causal/: analyzer.rs  mod.rs
crates/cortex-turn/src/confidence/: mod.rs
crates/cortex-turn/src/context/: builder.rs  compress.rs  evidence.rs  importance.rs  mod.rs  pressure.rs  pressure_response.rs  sliding_window.rs  summarize.rs
crates/cortex-turn/src/llm/: anthropic.rs  client.rs  cost.rs  mock.rs  mod.rs  normalize.rs  ollama.rs  openai.rs  projection.rs  provider.rs  types.rs
crates/cortex-turn/src/mcp/: bridge.rs  manager.rs  mod.rs  server.rs  session.rs  sse.rs  stdio.rs
crates/cortex-turn/src/memory/: batch_post_turn.rs  calibration.rs  consolidate.rs  decay.rs  evolution.rs  extract.rs  learning_metrics.rs  lifecycle.rs  mod.rs  recall.rs  user_signal.rs
crates/cortex-turn/src/meta/: adaptive.rs  doom_loop.rs  fatigue.rs  frame_audit.rs  health_checker.rs  health_recovery.rs  mod.rs  monitor.rs  rpe.rs
crates/cortex-turn/src/orchestrator/: dmn.rs  mod.rs  perf.rs  post_turn.rs  resume.rs  sn.rs  tpn.rs
crates/cortex-turn/src/reasoning/: engine.rs  mod.rs
crates/cortex-turn/src/risk/: assessor.rs  denial.rs  gate.rs  mod.rs
crates/cortex-turn/src/skills/: defaults.rs  evolution.rs  loader.rs  mod.rs  skill_tool.rs
crates/cortex-turn/src/tests/: mod.rs  orchestrator_guardrails.rs
crates/cortex-turn/src/tools/: agent.rs  bash.rs  cron.rs  edit.rs  image_gen.rs  memory_tools.rs  mod.rs  read.rs  send_media.rs  tts.rs  video_gen.rs  web_fetch.rs  web_search.rs  write.rs
crates/cortex-turn/src/working_memory/: mod.rs
crates/cortex-turn/tests/: executor.rs  integration.rs  memory_lifecycle.rs  memory_tools.rs  real_embedding.rs  real_llm.rs  safety_contracts.rs
crates/cortex-types/: Cargo.toml
crates/cortex-types/src/: attention.rs  audit.rs  causal.rs  cognitive.rs  confidence.rs  config.rs  control.rs  deployment.rs  event.rs  evolution.rs  goal.rs  id.rs  lib.rs  mcp.rs  memory.rs  message.rs  outbound.rs  ownership.rs  permission.rs  plugin.rs  policy.rs  prompt.rs  provenance.rs  reasoning.rs  resume.rs  retrieval.rs  session.rs  shared_task.rs  side_effect.rs  skills.rs  turn.rs  usage.rs  web.rs  working_memory.rs  workspace.rs
crates/cortex-types/tests/: contracts.rs  deployment.rs  mechanisms.rs
docs/: compatibility.md  config.md  executive.md  maturity.md  ops.md  plugins.md  quickstart.md  retrieval.md  roadmap.md  testing.md  usage.md
docs/zh/: compatibility.md  config.md  executive.md  maturity.md  ops.md  plugins.md  quickstart.md  retrieval.md  roadmap.md  usage.md
fixtures/legacy-1.4/sessions/: session-old.json
scripts/: check-docs-drift.sh  check-package-surface.sh  check-secrets.sh  check-suppressions.sh  cortex.sh  gate.sh  package-release.sh
static/: app.js  audit.html  dashboard.html  index.html  style.css
