[workspace]
resolver = "2"
members = [
    "crates/cortex-app",
    "crates/cortex-kernel",
    "crates/cortex-retrieval",
    "crates/cortex-runtime",
    "crates/cortex-sdk",
    "crates/cortex-turn",
    "crates/cortex-types",
]

[workspace.package]
version = "1.5.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/by-scott/cortex"

[workspace.dependencies]
cortex-types = { path = "crates/cortex-types" }
cortex-kernel = { path = "crates/cortex-kernel" }
cortex-retrieval = { path = "crates/cortex-retrieval" }
cortex-runtime = { path = "crates/cortex-runtime" }
cortex-sdk = { path = "crates/cortex-sdk" }
cortex-turn = { path = "crates/cortex-turn" }

chrono = { version = "0.4", features = ["serde"] }
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rusqlite = { version = "0.37", features = ["bundled"] }
tempfile = "3"
uuid = { version = "1", features = ["serde", "v7"] }
