[package]
name = "cortex-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Cortex command-line entrypoint"
publish = false

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
cortex-runtime = { workspace = true }
cortex-types = { workspace = true }
