[package]
name = "cortex-retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Ownership-filtered RAG evidence retrieval for Cortex"
publish = false

[dependencies]
cortex-types = { workspace = true }
