[package]
name = "cortex-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cortex-kernel = { workspace = true }
cortex-retrieval = { workspace = true }
cortex-turn = { workspace = true }
cortex-types = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
