[package]
name = "cortex-sdk"
version = "1.5.0"
edition = "2024"
license = "MIT"
description = "SDK for Cortex production plugins"
repository = "https://github.com/by-scott/cortex"
homepage = "https://github.com/by-scott/cortex"
documentation = "https://docs.rs/cortex-sdk"
readme = "README.md"
keywords = ["cortex", "plugin", "sdk", "agent"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
