[package]
name = "cortex-turn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cortex-sdk = { path = "../cortex-sdk" }
cortex-kernel = { workspace = true }
cortex-types = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }

[features]
real-llm = []

[dev-dependencies]
tempfile = { workspace = true }
