[package]
name = "cortex-turn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Turn planning and model-provider contracts for Cortex"
publish = false

[dependencies]
cortex-retrieval = { workspace = true }
cortex-types = { workspace = true }
